Preventing scrollbar stupidity when drag-selecting.
git-svn-id: file:///root/var/svn/trunk/uploadr@63 2ccee060-bf41-0410-b5a3-d28fdbd3ea41

--- a/MacUploadr.app/Contents/Resources/chrome/skin/uploadr/main.css
+++ b/MacUploadr.app/Contents/Resources/chrome/skin/uploadr/main.css
@@ -277,6 +277,7 @@ div.toolbarseparator {
 	margin: 0;
 	padding: 5px;
 	overflow: auto;
+	overflow-x: hidden;
 }
 
 /* Photostream look and feel */
